log
Thu 23 Mar 2023 03:54:50 PM UTC: 
 tests:  0|6
total_score: 0/70
f561813
Thu 23 Mar 2023 03:57:19 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List->head = data;
      |       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   35 |   List->tail = NULL;
      |       ^~
list.c:36:7: error: expected identifier or ‘(’ before ‘->’ token
   36 |   List->current = NULL;
      |       ^~
Compilation failed
eedea44
Thu 23 Mar 2023 03:58:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’
   31 | List * createList(void * head,void * tail,void * current) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ was here
    6 | List * createList(void);
      |        ^~~~~~~~~~
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List->head = data;
      |       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   35 |   List->tail = NULL;
      |       ^~
list.c:36:7: error: expected identifier or ‘(’ before ‘->’ token
   36 |   List->current = NULL;
      |       ^~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(void * head,void * tail,void * current) {
      |        ^~~~~~~~~~
Compilation failed
8b320f6
Thu 23 Mar 2023 03:59:07 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List->head = data;
      |       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   35 |   List->tail = NULL;
      |       ^~
list.c:36:7: error: expected identifier or ‘(’ before ‘->’ token
   36 |   List->current = NULL;
      |       ^~
Compilation failed
f54f644
Thu 23 Mar 2023 03:59:37 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List->head = NULL;
      |       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   35 |   List->tail = NULL;
      |       ^~
list.c:36:7: error: expected identifier or ‘(’ before ‘->’ token
   36 |   List->current = NULL;
      |       ^~
Compilation failed
8f6e462
Thu 23 Mar 2023 03:59:49 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
d5f34cc
Thu 23 Mar 2023 04:15:40 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:13: error: statement with no effect [-Werror=unused-value]
   41 |   list->head->data;
      |   ~~~~~~~~~~^~~~~~
list.c:43:12: error: expected expression before ‘void’
   43 |     return void * data;
      |            ^~~~
list.c: In function ‘nextList’:
list.c:47:16: error: statement with no effect [-Werror=unused-value]
   47 |   list->current->next;
      |   ~~~~~~~~~~~~~^~~~~~
list.c:48:12: error: expected expression before ‘void’
   48 |     return void * next;
      |            ^~~~
list.c: In function ‘lastList’:
list.c:52:13: error: statement with no effect [-Werror=unused-value]
   52 |   list->tail->data;
      |   ~~~~~~~~~~^~~~~~
list.c:53:12: error: expected expression before ‘void’
   53 |     return void * data;
      |            ^~~~
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
list.c: In function ‘lastList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
28be11f
Thu 23 Mar 2023 04:17:15 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:13: error: statement with no effect [-Werror=unused-value]
   41 |   list->head->data;
      |   ~~~~~~~~~~^~~~~~
list.c: In function ‘nextList’:
list.c:47:16: error: statement with no effect [-Werror=unused-value]
   47 |   list->current->next;
      |   ~~~~~~~~~~~~~^~~~~~
list.c: In function ‘lastList’:
list.c:52:13: error: statement with no effect [-Werror=unused-value]
   52 |   list->tail->data;
      |   ~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
859e4d2
Sat 25 Mar 2023 09:42:23 PM UTC: 
 list.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c:54:8: error: redefinition of ‘nextList’
   54 | void * nextList(List * list) {
      |        ^~~~~~~~
list.c:47:8: note: previous definition of ‘nextList’ was here
   47 | void * nextList(List * list) {
      |        ^~~~~~~~
list.c: In function ‘nextList’:
list.c:55:8: error: expected identifier or ‘(’ before ‘=’ token
   55 |   Node = n;
      |        ^
list.c: In function ‘lastList’:
list.c:61:29: error: expected identifier before ‘)’ token
   61 |   if(list->current == list->)
      |                             ^
list.c:62:13: error: statement with no effect [-Werror=unused-value]
   62 |   list->tail->data;
      |   ~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ab90c9b
Sat 25 Mar 2023 09:46:28 PM UTC: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:29: error: expected identifier before ‘)’ token
   56 |   if(list->current == list->)
      |                             ^
list.c:57:13: error: statement with no effect [-Werror=unused-value]
   57 |   list->tail->data;
      |   ~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8be6779
Sat 25 Mar 2023 09:47:35 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
4b2022a
